resources/js/style.scss
@use "sass:color";

@use "./styles/buttons";
@use "./styles/tables";
@use "./styles/inputs";
@use "./styles/toasts";
@use "./styles/uploader";
@use "./styles/downloader";
@use "./styles/footer";

@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");

:root {
  /* link colors */
  --link-color: rgb(57, 115, 144);
  --link-color-hover: rgb(27, 162, 230);
  --link-color-active: rgb(70, 154, 196);
  --link-color-disabled: rgba(190, 190, 190, 0.566);

  /* Button Colors */
  --primary-button-background-color: rgb(138, 208, 242);
  --primary-button-text-color: rgb(37, 37, 37);

  --primary-button-background-color-hover: rgb(70, 154, 196);
  --primary-button-text-color-hover: white;

  --primary-button-background-color-disabled: rgba(100, 100, 100, 0.566);
  --primary-button-text-color-disabled: rgba(255, 255, 255, 0.579);

  --secondary-button-background-color: rgb(255, 255, 255);
  --secondary-button-text-color: rgb(34, 34, 34);

  --secondary-button-background-color-hover: rgb(238, 238, 238);
  --secondary-button-text-color-hover: rgb(34, 34, 34);

  --secondary-button-background-color-disabled: rgba(100, 100, 100, 0.566);
  --secondary-button-text-color-disabled: rgba(255, 255, 255, 0.579);

  /* Uploader Colors */
  --uploader-background-color: rgba(240, 240, 240, 0.769);
  --uploader-text-color: rgb(71, 71, 71);

  --uploader-header-background-color: rgba(245, 245, 245, 0.5);
  --uploader-header-text-color: rgb(39, 39, 39);

  --uploader-item-background-color: rgba(255, 255, 255, 0.8);
  --uploader-item-text-color: rgb(39, 39, 39);

  /* Panel Colors */
  --panel-background-color: rgb(235, 235, 235);
  --panel-text-color: rgb(34, 34, 34);

  --panel-item-background-color: rgb(215, 215, 215);
  --panel-item-text-color: rgb(34, 34, 34);
  --panel-item-background-color-hover: rgb(238, 238, 238);
  --panel-item-text-color-hover: rgb(34, 34, 34);

  --panel-item-action-hover-background-color-from: rgba(238, 238, 238, 0.42);
  --panel-item-action-hover-background-color-to: rgb(238, 238, 238);

  --panel-header-background-color: rgba(80, 175, 223, 0.8);
  --panel-header-text-color: rgb(34, 34, 34);
  --panel-text-color-alt: rgb(126, 126, 126);

  --panel-subheader-background-color: linear-gradient(to bottom, rgb(236, 236, 236) 0%, rgb(241, 241, 241) 100%);
  --panel-subheader-text-color: rgb(34, 34, 34);

  --tabs-bar-background-color: rgb(221, 221, 221);

  --tabs-tab-background-color: rgb(211, 211, 211);
  --tabs-tab-text-color: rgb(53, 53, 53);

  --tabs-tab-background-color-hover: rgba(80, 175, 223, 0.8);
  --tabs-tab-text-color-hover: rgb(244, 244, 244);

  --tabs-tab-background-color-active: rgba(80, 175, 223, 0.8);
  --tabs-tab-text-color-active: rgb(244, 244, 244);

  --panel-nav-item-background-color: rgb(223, 223, 223);
  --panel-nav-item-text-color: rgb(53, 53, 53);

  --panel-nav-item-background-color-hover: rgba(80, 175, 223, 0.8);
  --panel-nav-item-text-color-hover: rgb(244, 244, 244);

  --panel-section-background-color: rgb(225, 225, 225);
  --panel-section-text-color: rgb(53, 53, 53);

  --panel-section-background-color-alt: rgb(218, 218, 218);
  --panel-section-text-color-alt: rgb(53, 53, 53);

  /* table colors */
  --table-background-color: rgb(221, 221, 221);
  --table-text-color: rgb(34, 34, 34);

  --table-header-background-color: rgba(80, 175, 223, 1);
  --table-header-text-color: rgb(255, 255, 255);

  --table-row-background-color: rgb(238, 238, 238);
  --table-row-text-color: rgb(34, 34, 34);

  --table-row-background-color-alt: rgb(241, 241, 241);
  --table-row-text-color-alt: rgb(34, 34, 34);

  /* input colors */
  --input-background-color: rgb(236, 236, 236);
  --input-text-color: rgb(34, 34, 34);
  --input-border-color: rgb(222, 222, 222);
  --input-border-color-hover: rgb(205, 205, 205);
  --input-border-color-focus: rgb(80, 175, 223);
  --input-placeholder-color: rgb(164, 164, 164);

  --checkbox-background-color: rgb(236, 236, 236);

  --checkbox-checked-background-color: rgb(80, 175, 223);
  --checkbox-checked-check-color: rgb(255, 255, 255);

  --label-text-color: rgb(34, 34, 34);

  --progress-bar-background-color: rgb(211, 211, 211);
  --progress-bar-fill-color: rgb(80, 175, 223);
  --progress-bar-text-color: rgb(34, 34, 34);

  /* Scrollbar Colors */
  --scrollbar-track-color: rgba(113, 113, 113, 0.119);
  --scrollbar-thumb-color: rgba(118, 118, 118, 0.495);
  --scrollbar-thumb-hover-color: rgba(81, 81, 81, 0.434);
  --scrollbar-width: 8px;
  --scrollbar-border-radius: 4px;

  /* Overlay */

  --overlay-background-color: rgba(255, 255, 255, 0.2);

  /* Button dimensions */
  --button-height: 50px;
  --button-width: 100%;
  --icon-only-button-width: 50px;

  /* Button border radius */
  --button-border-radius: 10px;

  /* Panel border radius */
  --panel-border-radius: 10px;

  /* Tabs border radius */
  --tabs-border-radius: 5px 5px 0 0;

  /* Settings dimensions */
  --settings-width: 100vw;
  --settings-height: 100vh;

  /* Status Colors */
  --color-success: rgb(34, 197, 94);
  --color-warning: rgb(234, 179, 8);
  --color-danger: rgb(239, 68, 68);
}

body {
  font-family: "Outfit", sans-serif;
  background: var(--panel-background-color);
  color: var(--panel-text-color);

  a {
    color: var(--link-color);
    text-decoration: none;
    &:hover {
      color: var(--link-color-hover);
    }
  }
}

#app {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
  @media (min-width: 900px) {
    padding: 20px;
  }
}

.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex-grow: 1;
  overflow: hidden;
  width: min(500px, 100%);
  margin-bottom: 20px;
  @media (min-width: 900px) {
    margin-bottom: -60px;
  }
}
/* ... */

